--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
 
+    <title>Esittely</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 60px auto;
+      background-color: white;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #2c3e50;
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      color: #34495e;
+      font-size: 28px;
+      margin-top: 30px;
+    }
+    p, li {
+      font-size: 18px;
+      color: #333;
+    }
+    ul {
+      padding-left: 20px;
+    }
+  </style>
+
+</head>
+<body>
+    <div class="container">
+    <h1>Hei! Olen Egor</h1>
+    <p>Olen 17-vuotias ja intohimoinen ohjelmoija.</p>
+    
+    <h2>Ohjelmointitaidot</h2>
+    <ul>
+      <li>Python (pääkielet)</li>
+      <li>HTML (verkkosivujen tekeminen)</li>
+      <li>C# (sovellusten kehitys)</li>
+    </ul>
+
+    <h2>Projektit</h2>
+    <p>Minulla on useita omia projekteja, joita olen tehnyt oppimisen ja harrastuksen vuoksi.</p>
+  </div>
+</body>
+</html>
