--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Egorin Portfolio</title>
+  <title>Portfolio</title>
 
   <!-- Bootstrap 3.3.7 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Egorin Portfolio</a>
+        <a class="navbar-brand" href="#">Portfolio</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -32,7 +32,7 @@
     <div id="minusta" class="row">
       <div class="col-sm-12">
         <h2>Minusta</h2>
-        <p>Olen Egor, 17-vuotias ohjelmoinnin harrastaja. Olen kiinnostunut työharjoittelusta ohjelmistokehityksen ja tietotekniikan parissa. Harrastan ohjelmointia, videopelejä ja tekniikkaa.</p>
+        <p>Olen Egor, 17-vuotias ohjelmoinnin harrastaja. Olen kiinnostunut työharjoittelusta ohjelmistokehityksen ja tietotekniikan parissa. Harrastan ohjelmointia, videopelejä.</p>
         <p><strong>Vahvuudet:</strong> Uutteruus, tavoiteorientoitunut.<br>
         <strong>Haaste:</strong> Laiskuus - mutta se saa minut keksimään tehokkaita tapoja työskennellä.</p>
       </div>
@@ -44,9 +44,13 @@
       <div class="col-md-12">
         <h2>Osaaminen</h2>
         <ul>
-          <li>HTML, CSS, PHP, Python, C#</li>
-          <li>Bootstrap 3.3</li>
-          <li>Hyvä ymmärrys ohjelmoinnin perusteista</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>PHP</li>
+          <li>Python</li>
+          <li>C#</li>
+          <li>JavaScript</li>
+          <li>SQL</li>
         </ul>
         <h3>Kielitaito</h3>
         <table class="table table-bordered">
@@ -68,8 +72,8 @@
       <div class="col-md-12">
         <h2>Koulutus & Työkokemus</h2>
         <ul>
-          <li>Peruskoulu – valmistunut</li>
-          <li>Toinen aste – lukio ja ammattikoulu (kesken)</li>
+          <li>Peruskoulu - valmistunut</li>
+          <li>Toinen aste - ammattikoulu (kesken)</li>
           <li>Ei vielä työkokemusta</li>
         </ul>
       </div>
@@ -80,8 +84,7 @@
     <div id="projektit" class="row">
       <div class="col-md-12">
         <h2>Projektit</h2>
-        <p>GitHub-linkki projektiin:</p>
-        <p><a href="https://github.com/kendr3w/final_project_calc" target="_blank">Katso projekti GitHubissa</a></p>
+        <p><a href="https://github.com/kendr3w" target="_blank">Tutustu kaikkiin projekteihini GitHubissa</a></p>
       </div>
     </div>
 
@@ -89,23 +92,9 @@
 
     <div id="yhteys" class="row">
       <div class="col-md-6">
-        <h2>Yhteydenottolomake</h2>
-        <form>
-          <div class="form-group">
-            <label for="name">Nimi</label>
-            <input type="text" name="name" id="name" class="form-control" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Sähköposti</label>
-            <input type="email" name="email" id="email" class="form-control" required>
-          </div>
-          <div class="form-group">
-            <label for="message">Viesti</label>
-            <textarea name="message" id="message" class="form-control" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Lähetä</button>
-        </form>
-      </div>
+        <h2>Ota yhteys</h2>
+        <h4>Telegram: @heavenwe</h4>
+        <h4>Instagram: @ecmetry</h4>
     </div>
   </div>
 
