--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- MINUSTA -->
     <section id="minusta">
       <h2>MINUSTA</h2>
-      <p>Olen Egor, 17-vuotias ohjelmoinnin harrastaja. Olen kiinnostunut työharjoittelusta ohjelmistokehityksen ja tietotekniikan parissa. Harrastan ohjelmointia ja videopelejä.</p>
+      <p>Olen Egor, 17-vuotias ohjelmoinnin harrastaja ja opiskelija. Olen kiinnostunut työharjoittelusta ohjelmistokehityksen ja tietotekniikan parissa. Harrastan ohjelmointia ja videopelejä.</p>
       <p><strong>Vahvuudet:</strong> Uutteruus, tavoiteorientoitunut.<br>
       <strong>Haaste:</strong> Laiskuus - mutta se saa minut keksimään tehokkaita tapoja työskennellä.</p>
     </section>
@@ -60,7 +60,7 @@
         <li>Python</li>
         <li>C#</li>
         <li>JavaScript</li>
-        <li>SQL</li>
+        <li>MySQL</li>
       </ul>
 
       <h3>KIELITAITO</h3>
@@ -83,7 +83,7 @@
       <h2>KOULUTUS & TYÖKOKEMUS</h2>
       <ul>
         <li>Peruskoulu - valmistunut</li>
-        <li>Toinen aste - ammattikoulu (kesken)</li>
+        <li>Toinen aste - Savon ammattiopisto, Tieto- ja viestintätekniikka (valm. kevät 2027)</li>
         <li>Ei vielä työkokemusta</li>
       </ul>
     </section>
@@ -103,10 +103,6 @@
     <!-- YHTEYS -->
     <section id="yhteys">
       <h2>OTA YHTEYS</h2>
-      <h4>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" class="social-icon" alt="Telegram">
-        Telegram: <a href="https://t.me/heavenwe" target="_blank">@heavenwe</a>
-      </h4>
       <h4>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="social-icon" alt="Instagram">
         Instagram: <a href="https://instagram.com/ecmetry" target="_blank">@ecmetry</a>
