--- a/index.html
+++ b/index.html
@@ -93,10 +93,38 @@
     <!-- PROJEKTIT -->
     <section id="projektit">
       <h2>PROJEKTIT</h2>
-      <p><a href="https://github.com/kendr3w" target="_blank" class="btn btn-primary">
-        <i class="fa fa-github"></i> Tutustu projekteihini GitHubissa
-      </a></p>
+
+      <div class="projekti-lista">
+
+        <!-- PROJEKTI 1 -->
+        <div class="projekti">
+          <img src="img/site.jpg" alt="Project 1">
+          <h3><a href="https://tvt-linux.tvtedu.fi/~213582/index.php?getAll=">Webcite for cars</a></h3>
+          <p>Verkkosivusto, jossa on tietokanta autojen seurantaan</p>
+          <a href="https://github.com/kendr3w/websiteforcars" target="_blank">Katso GitHubissa</a>
+        </div>
+      </div>
+        <!-- PROJEKTI 2 -->
+        <div class="projekti">
+          <img src="img/project2.jpg" alt="Project 2">
+          <h3>FinTrack</h3>
+          <p>Henkilökohtainen Budjettiseuranta</p>
+          <a href="https://github.com/Xupie/FinTrack" target="_blank">Katso GitHubissa</a>
+        </div>
+        <!-- PROJEKTI 3 -->
+        <div class="projekti">
+          <img src="img/project2.jpg" alt="Project 2">
+          <h3>Taitaja 2025 semifinaali</h3>
+          <p>Taitaja 2025 semifinaali tehtävä</p>
+          <a href="https://github.com/Xupie/taitaja2025" target="_blank">Katso GitHubissa</a>
+        </div>
+      <p>
+        <a href="https://github.com/kendr3w" target="_blank" class="btn btn-primary">
+          <i class="fa fa-github"></i> Tutustu projekteihini GitHubissa
+        </a>
+      </p>
     </section>
+
 
     <hr>
 
