--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
       </div>
         <!-- PROJEKTI 2 -->
         <div class="projekti">
-          <img src="img/project2.jpg" alt="Project 2">
+          <img src="img/.jpg" alt="Project 2">
           <h3>FinTrack</h3>
           <p>Henkilökohtainen Budjettiseuranta</p>
           <a href="https://github.com/Xupie/FinTrack" target="_blank">Katso GitHubissa</a>
         </div>
         <!-- PROJEKTI 3 -->
         <div class="projekti">
-          <img src="img/project2.jpg" alt="Project 2">
+          <img src="img/site2.jpg" alt="Project 2">
           <h3>Taitaja 2025 semifinaali</h3>
           <p>Taitaja 2025 semifinaali tehtävä</p>
           <a href="https://github.com/Xupie/taitaja2025" target="_blank">Katso GitHubissa</a>
