--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
         <!-- PROJEKTI 2 -->
         <div class="projekti">
-          <img src="fintrack.jpg" alt="Project 2">
+          <img src="img/fintrack.jpg" alt="Project 2">
           <h3>FinTrack</h3>
           <p>Henkilökohtainen Budjettiseuranta</p>
           <a href="https://github.com/Xupie/FinTrack" target="_blank">Katso GitHubissa</a>
