--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <li>C#</li>
         <li>JavaScript</li>
         <li>MySQL</li>
+        <li>WordPress</li>
+        <li>Git & GitHub</li>
+        <li>3D-mallinnus</li>
       </ul>
 
       <h3>KIELITAITO</h3>
@@ -71,7 +74,7 @@
         <tbody>
           <tr><td>Suomi</td><td>Hyvä</td></tr>
           <tr><td>Venäjä</td><td>Äidinkieli</td></tr>
-          <tr><td>Englanti</td><td>Hyvä</td></tr>
+          <tr><td>Englanti</td><td>Erinomainen</td></tr>
         </tbody>
       </table>
     </section>
@@ -135,13 +138,26 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="social-icon" alt="Instagram">
         Instagram: <a href="https://instagram.com/ecmetry" target="_blank">@ecmetry</a>
       </h4>
+      <h4>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" class="social-icon" alt="Email">
+        Sähköposti: <a href="mailto:egor@kendr3w.com">ekendr3w@gmail.com</a>
+      </h4>
+      <h4>
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" class="social-icon" alt="User">
+        Yhteystiedot: Egor Leliushok
+      </h4>
+      <h4>
+        <img src="https://img.icons8.com/ios-filled/50/000000/phone.png" class="social-icon" alt="Phone">
+        Puhelin: <a href="tel:+358401441932">+358401441932</a>
+      </h4>
     </section>
+    
 
   </div>
 
 
   <footer>
-    <p>&copy; 2025 Egor | Portfolio</p>
+    <p>&copy; 2026 Egor | Portfolio</p>
   </footer>
 
   <!-- Bootstrap JS -->
