--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>MINUSTA</h2>
       <p>Olen Egor, 17-vuotias ohjelmoinnin harrastaja ja opiskelija. Olen kiinnostunut työharjoittelusta ohjelmistokehityksen ja tietotekniikan parissa. Harrastan ohjelmointia ja videopelejä.</p>
       <p><strong>Vahvuudet:</strong> Uutteruus, tavoiteorientoitunut.<br>
-      <strong>Haaste:</strong> Laiskuus - mutta se saa minut keksimään tehokkaita tapoja työskennellä.</p>
+      <strong>Haaste:</strong> Vähäinen työkokemus alalta - korvaan sen vahvalla motivaatiolla ja omatoimisella oppimisella.</p>
     </section>
 
     <hr>
